apps/legacy/catolling/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catolling
  namespace: legacy
  labels:
    app: catolling
spec:
  replicas: 2
  selector:
    matchLabels:
      app: catolling
  template:
    metadata:
      labels:
        app: catolling
    spec:
      containers:
      - name: catolling
        image: hyeonwoo5342/catolling:5
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: dockerhub-secret
