apps/legacy/catolling/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catolling-ingress
  namespace: legacy
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: catolling.haenu.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: catolling
            port:
              number: 80
